--- a/Objetivos Prioritarios/Views/Objetivo/Alias/ObjetivoAliasListPartial.cshtml
+++ b/Objetivos Prioritarios/Views/Objetivo/Alias/ObjetivoAliasListPartial.cshtml
@@ -9,7 +9,7 @@
         </select>
     </div>
     <div class="col-md-6" style="text-align:right">
-        <button class="btn btn-primary" onclick="AddObjetivoAliasModal()">Agregar Alias</button>
+        <button class="btn btn-primary" onclick="AddObjetivoAliasModal2()">Agregar Alias</button>
     </div>
 </div>
 <br />
