--- a/Objetivos Prioritarios/Views/Objetivo/ObjetivosListPartial.cshtml
+++ b/Objetivos Prioritarios/Views/Objetivo/ObjetivosListPartial.cshtml
@@ -107,7 +107,7 @@
             orderable: true,
             IsFiltered: false
         },
-       
+
 
         {
             title: "Acciones",
@@ -273,7 +273,8 @@
         },
             function (isConfirm) {
                 if (isConfirm) {
-                    location.href = '@Url.Action("AddEditObjetivos","Objetivo")';
+
+                    location.href = '@Url.Action("AddObjetivo", "Objetivo")';
                 } else {
 
                 }
