--- a/Objetivos Prioritarios/Views/Shared/_Layout.cshtml
+++ b/Objetivos Prioritarios/Views/Shared/_Layout.cshtml
@@ -376,15 +376,21 @@
                 </a>
             </li><!-- End Blank Page Nav -->
             <li class="nav-item">
+                <a class="nav-link collapsed" href="@Url.Action("Index","Asuntos")">
+                    <i class="fa fa-link"></i>
+                    <span>Asuntos Relacionados</span>
+                </a>
+            </li><!-- End Blank Page Nav -->
+            <li class="nav-item">
                 <a class="nav-link collapsed" href="@Url.Action("Index","FichaObjetivo")">
-                    <i class="fa fa-file"></i>
+                    <i class="fa fa-file-archive-o"></i>
                     <span>Ficha Objetivos Prioritarios</span>
                 </a>
             </li><!-- End Blank Page Nav -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="@Url.Action("Index","Asuntos")">
-                    <i class="fa fa-file"></i>
-                    <span>Asuntos Relacionados</span>
+                <a class="nav-link collapsed" href="@Url.Action("IndexAlbum","FichaObjetivo")">
+                    <i class="fa fa-folder-open"></i>
+                    <span>Album Ficha Objetivos Prioritarios</span>
                 </a>
             </li><!-- End Blank Page Nav -->
 
