--- a/Objetivos Prioritarios/Views/Objetivo/Nombre/AddObjetivoNombrePartial.cshtml
+++ b/Objetivos Prioritarios/Views/Objetivo/Nombre/AddObjetivoNombrePartial.cshtml
@@ -8,21 +8,21 @@
             </div>
             <div class="modal-body">
                 <div class="row">
+                    <div class="col-sm-2 col-md-2"><label class="control-label">Nombre: </label></div>
+                    <div class="col-sm-10 col-md-10">
+                        <input type="text" class="form-control" id="txtNombreObj" />
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-sm-2 col-md-2"><label class="control-label">Paterno: </label></div>
                     <div class="col-sm-10 col-md-10">
-                        <input type="text" class="form-control" id="txtPaterno" />
+                        <input type="text" class="form-control" id="txtPaternoObj" />
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-2 col-md-2"><label class="control-label">Materno: </label></div>
                     <div class="col-sm-10 col-md-10">
-                        <input type="text" class="form-control" id="txtMaterno" />
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-2 col-md-2"><label class="control-label">Nombre: </label></div>
-                    <div class="col-sm-10 col-md-10">
-                        <input type="text" class="form-control" id="txtNombre" />
+                        <input type="text" class="form-control" id="txtMaternoObj" />
                     </div>
                 </div>
             </div>
@@ -43,9 +43,9 @@
 
         $("#btnSave").click(function () {
             var datas = {
-                nvarchar_nombre: $("#txtNombre").val(),
-                nvarchar_paterno: $("#txtPaterno").val(),
-                nvarchar_materno: $("#txtMaterno").val(),
+                nvarchar_nombre: $("#txtNombreObj").val(),
+                nvarchar_paterno: $("#txtPaternoObj").val(),
+                nvarchar_materno: $("#txtMaternoObj").val(),
                 int_id_objetivo: $("#int_id_objetivo").val()
             };
               $.ajax({
@@ -65,8 +65,11 @@
                              function (isConfirm) {
                                  //swal.close();
 
-                                     $('#closeModal').trigger('click');
-                                     refreshNombresList();
+                                 $('#closeModal').trigger('click');
+                                 refreshNombresList();
+                                 if (data.Id != 0) {
+                                     $("#nombrePrincipal").text("Nombre Objetivo: " + data.ExtraData)
+                                 }
                              });
                       }
                       if (data.IsSuccess == undefined) {
